[package]
name = "savestates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dirs = "5.0.1"
log = "0.4.21"
walkdir = "2.5.0"
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
fs_extra = "1.3.0"
chrono = "0.4.38"